test/octave.test/error/warning-1.m
function g () warning ("foo") endfunction
function f () g (); endfunction
f ();
